# app/controllers/api/v1/service_offerings_controller.rb
@@ -25,7 +25,13 @@ module Api
 
         source_type = retrieve_source_type(service_offering)
         logger.info("ServiceOffering##{operation_type}: Retrieved SourceType(id: #{source_type.id}, name: #{source_type.name}), ServiceOffering(id: #{service_offering.id}, source_ref: #{service_offering.source_ref})")
-        task = Task.create!(:name => "ServiceOffering##{operation_type}", :source_id => service_offering.source_id, :forwardable_headers => Insights::API::Common::Request.current_forwardable, :tenant => service_offering.tenant, :state => "pending", :status => "ok")
+
+        task_opts = {:name => "ServiceOffering##{operation_type}", :source_id => service_offering.source_id, :forwardable_headers => Insights::API::Common::Request.current_forwardable, :tenant => service_offering.tenant, :state => "pending", :status => "ok"}
+
+        task = operation_type.to_s == "order" ? LaunchJobTaskService.new(params).process.task : Task.create!(task_opts)
+        
+        task.dispatch
+
         logger.info("ServiceOffering##{operation_type}: ServiceOffering(id: #{service_offering.id}, source_ref: #{service_offering.source_ref}): Task(id: #{task.id}) created.")
 
         payload = send("payload_for_#{operation_type}".to_sym, task, service_offering)
