# app/models/full_refresh_upload_task.rb
@@ -1,0 +1,2 @@
+class FullRefreshUploadTask < MqttClientTask
+end
