# app/models/launch_job_task.rb
@@ -1,0 +1,7 @@
+class LaunchJobTask < MqttClientTask
+  # Post task to MQTT Controller
+  def dispatch
+    # TODO: create MQTT controller service
+    # MQTTController.dispatch(input)
+  end
+end
